# zhar

./: .gitignore  README.md  lefthook.yml  pyproject.toml
.github/agents/: zhar.agent.md
.github/hooks/: zhar-memory.json  zhar-memory.py
.github/instructions/: zhar-memory.instructions.md
.github/skills/zhar-harness-workflow/: SKILL.md
.github/skills/zhar-memory-mutation/: SKILL.md
.github/skills/zhar-template-resolution/: SKILL.md
.zhar/: facts.json
.zhar/mem/: architecture_context.json  code_history.json  decision_trail.json  notes.json  problem_tracking.json  project_dna.json
docs/: session-runtime-spec.md
pytest-cache-files-g1een8bn/v/cache/: nodeids
scripts/: sync_harness_files.py
src/zhar/: __init__.py  cli.py
src/zhar/agents/: __init__.py  installer.py
src/zhar/mem/: gc.py  (+11 more)
test_src/from_zmem/: graph.json  local-config.toml
test_src/mem/: code_history.json  decision_trail.json  project_dna.json
tests/: conftest.py
tests/agents/: test_installer.py
tests/cli/: test_agent_get.py  test_cli.py  test_harness.py  test_stack_fetch.py
tests/harness/: test_getter.py  test_installer.py  test_sync_script.py
tests/integration/: test_mem_fixture_integration.py
tests/mem/: test_export.py  test_gc.py  test_group.py  test_ids.py  test_index.py  test_loader.py  test_node.py  test_query.py  test_scan.py  test_store.py  test_verify.py
tests/mem_session/: test_runtime.py
tests/migration/: test_zmem_migrate.py
tests/parser/: test_cond.py  test_render.py
tests/utils/: test_cache.py  test_config.py  test_facts.py  test_fs.py  test_times.py
(+71 files in other folders)
